Fix .day element visibility in forecast widgets

--- a/src/styles/components/Forecast.scss
+++ b/src/styles/components/Forecast.scss
@@ -3,11 +3,16 @@
 .Forecast {
   margin-top: 2rem;
   @include no-text-select;
+  .forecast-container{
+    h3{
+      margin-bottom: 30px;
+    }
+  }
 
   .widget-container {
     display: flex;
     gap: 1rem;
-    overflow-x: auto; 
+    // overflow-x: auto; 
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
 
